# fast_api

./: pyproject.toml
fast_api/: app.py
tests/: test_app.py
