[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["eduardorco <eduardorco10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL','PT']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = 'fastapi dev fast_api/app.py'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_api -vv'
post_test = 'coverage html'